# SJTU_Hogwarts

Paddle-Lite/: .gitignore  CMakeLists.txt  arm_fpga_build.sh  exclude.list  paddle_lite_build.sh  upload.sh
Paddle-Lite/intel_fpga_sdk/include/: intelfpga.h  intelfpga_conv_info.h  qWorks.h  saturate.h  utils.h
Paddle-Lite/intel_fpga_sdk/lib/: CMakeLists.txt  build.sh  fpga.h  intelfpga.cc  utils.cc
Paddle-Lite/lite/api/: cxx_api.cc  paddle_use_kernels.h  paddle_use_passes.h
Paddle-Lite/lite/core/: CMakeLists.txt  optimizer.h  program.cc  subgraph_engine_base.cc
Paddle-Lite/lite/core/mir/: CMakeLists.txt  intel_fpga_kernel_place_correct_pass.cc  intel_fpga_kernel_place_correct_pass.h
Paddle-Lite/lite/kernels/intel_fpga/: CMakeLists.txt  conv_compute.cc  conv_intelfpga.cc  conv_intelfpga.h  subgraph_compute.cc  subgraph_compute.h
Paddle-Lite/lite/kernels/intel_fpga/bridges/: CMakeLists.txt  conv_op.cc  graph.cc  graph.h  paddle_use_bridges.h
Paddle-Lite/lite/tests/kernels/: reduce_mean_compute_test.cc
Paddle-Lite/lite/tools/cmake_tools/: parse_kernel_registry.py
nnadrv/inc/: nnadrv.h
nnadrv/src/: .nnadrv.o.cmd  nnadrv.c
ssd_detection_demo/: build.sh  build_ssd_detection.sh  config_ssd_mobilenet_v1.cfg  debug.sh  exclude.list  nnadrv.ko  remotedebug.sh  run.sh  update.sh  upload.sh
ssd_detection_demo/Paddlelite/include/: paddle_use_kernels.h  paddle_use_ops.h
ssd_detection_demo/labels/: label_list.roadsign
ssd_detection_demo/lib/: libgomp.so.1.0.0
ssd_detection_demo/ocv3.4.10/lib/: libopencv_flann.so.3.4  libopencv_ml.so.3.4.10  libopencv_objdetect.so.3.4  libopencv_photo.so.3.4.10  libopencv_shape.so.3.4.10  libopencv_video.so.3.4.10  libopencv_videoio.so.3.4
ssd_detection_demo/ssd_detection_src/: CMakeLists.txt  build.sh  ssd_detection.cc
test/input_rearrange_test/: CMakeLists.txt  asm_rearrange.cc  input_rearrange_tb.cc  neon_input_rearrange_1.cc  neon_input_rearrange_2.cc  neon_input_rearrange_3.cc  neon_rearrange.h  pattern_gererator.py  rearrange_8_layers.cc
test/memcpy_test/: CMakeLists.txt  main.cc
test/neon_test/: .gitignore  CMakeLists.txt  arm_test.c  asm_rearrange.cc  input_rearrange_1.cc  input_rearrange_tb.cc  neon_input_rearrange_2.cc  neon_input_rearrange_3.cc  neon_rearrange.h  rearrange_8_layers.cc
test/output_rearrange_test/: CMakeLists.txt  asm_rearrange.cc  neon_output_rearrange.cc  output_rearrange.h  tb.cc
(+9 files in other folders)
